	- Removed broken tooltip from IMF events
	- Fixed Carrier model shading
	- Fixed the 2015 UAV showing up as a tu22
	- Fixed issue w/ Operative Portraits coming up as blanks
	- Fixed Natural Orator spy trait giving useless effects
	- Semi-Consumption Economy can no longer be taken by a "Rentier State"
	- Game rules localisation fixes
	- Corporate Tax Cost localisation clarification

Content:
	- USA, SOV, CHI, ENG, FRA, RAJ, JAP, ITA, SPR, PER, KOR, TAI, ISR, NKO, TUR, GER, UKR, BRA, PAK, EGY missile technology setup
	- All countries now start with reworked generals and advisors
	- Updated Turkish political parties, leaders and starting political setup in preparation for more Turkish content
	- Temporarily disabled Narco State/Mafia State content which is causing perpetual civil wars in South America
	- Minor additions + some quality of life changes to the Italian Tree

Graphics:
	- New Russian Infantry Model
	- T-90, BTR-80, BMP-3, BMP-2 Russian models
	- Added planes to the deck of the Russian AC model
	- All generic nations now have plane models based off their equipment types

v1.6.2 - Hotfix
AI:
	- Baltics shouldn't leave NATO if neutral

Bugfixes:
	- Fixed GROM image for Poland focus tree
	- Brazilian 2017 Election Killswitch fixed
	- Liechtenstein state name is now correctly name
	- Fixed LEB being named "test"
	- Fixed vanilla custom icons not being present
	- "Assert Control" focus in North Korea will now correctly annex the Korean civil war nation
	- Declare Independence for Hong Kong should now end puppet status properly, also removes Basic Law, Lack of Universal Suffrage and One Country Two Systems national spirits
	- Fixed LIC, MNC, and ADO ability to have buildings
	- Fixed a hole in the Syrian Republican Guard template
	- Fixed Syrian debt negotiation exploit
	- Fixed BAE Aerospace icon
	- Insult event pictures fixed
	- Fixed integrate decision Yemen for Saudi Arabia
	- Fixed SCO event picture pathing