@@ -96,7 +96,7 @@ country_event = {
 		}
 		text = denmark.4001.d2
 	}
-	picture = GFX_report_event_ace_promoted
+	picture = GFX_MD_report_event_ace_promoted
 	fire_only_once = yes
 	is_triggered_only = yes
 
@@ -104,10 +104,103 @@ country_event = {
 	option = {
 		name = denmark.4001.o1
 		log = "[GetDateText]: [This.GetName]: denmark.4001.o1 executed"
+		DEN = { country_event = denmark.4002 }
 	}
 
 	#Deny Denmarks Request/We need the planes for ourselves
+	option = {
+		name = denmark.4001.o2
+		log = "[GetDateText]: [This.GetName]: denmark.4001.o2 executed"
+		add_political_power = 5
+		DEN = { country_event = denmark.4003 }
+	}
 }
+
+# SOV/USA ACCEPTS OUR REQUEST
+country_event = {
+	id = denmark.4002
+	title = denmark.4002.t
+	desc = {
+		trigger = {
+			has_idea = NATO_member
+			DEN = { has_idea = NATO_member }
+		}
+		text = denmark.4002.d1
+	}
+	desc = {
+		trigger = {
+			is_in_faction_with = DEN
+			DEN = { is_in_faction_with = SOV }
+		}
+		text = denmark.4002.d2
+	}
+	picture = GFX_fighter_jet
+	fire_only_once = yes
+	is_triggered_only = yes
+
+	option = {
+		name = denmark.4002.o1
+		log = "[GetDateText]: [This.GetName]: denmark.4002.o1 executed"
+		IF = {
+			limit = { has_idea = NATO_member }
+			add_equipment_to_stockpile = {
+				type = MR_Fighter3
+				amount = 5
+				producer = USA
+			}
+			ELSE_IF = {
+				limit = { is_in_faction_with = SOV }
+					add_equipment_to_stockpile = {
+						type = MR_Fighter3
+						amount = 5
+						producer = SOV
+					}
+				}
+			}
+		}
+
+# SOV/USA DENIES OUR REQUEST
+country_event = {
+	id = denmark.4003
+	title = denmark.4003.t
+	desc = {
+		trigger = {
+			has_idea = NATO_member
+			DEN = { has_idea = NATO_member }
+		}
+		text = denmark.4003.d1
+	}
+	desc = {
+		trigger = {
+			is_in_faction_with = DEN
+			DEN = { is_in_faction_with = SOV }
+		}
+		text = denmark.4003.d2
+	}
+	picture = GFX_fighter_jet
+	fire_only_once = yes
+	is_triggered_only = yes
+
+	option = {
+		name = denmark.4003.o1
+		log = "[GetDateText]: [This.GetName]: denmark.4003.o1 executed"
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 # Reactionary Focus
 country_event = {
@@ -882,6 +975,4 @@ country_event = {
 		add_stability = 0.01
 	}
 }
-
-
-
+}
