@@ -537,6 +537,19 @@
  denmark.42.d: "Denmark have extended an invitation to join the Union of Scandinavia, by accepting we become a part of the Communist bloc in Scandinavia"
  denmark.42.a: "Sounds Great!"
  denmark.42.b: "No way!"
+ denmark.4001.t: "Denmark Is Requesting Some Fighters!"
+ denmark.4001.d1: "As part of NATO, Denmark is requesting we share some of our fighters to help protect the skies, doing so will surely maintain the unity of the organisation and will curry favour with [DEN.GetLeader]."
+ denmark.4001.d2: "As part of our faction, Denmark is requesting we share some of our fighters to help protect the skies, doing so will surely maintain the unity of the organisation and will curry favour with [DEN.GetLeader]."
+ denmark.4001.o1: "Of Course!"
+ denmark.4001.o2: "Not a Chance!"
+ denmark.4002.t: "Our Allies Have Come To Our Aid!"
+ denmark.4002.d1: "[USA.GetLeader] has finished signing off on some shiny new fighters for our brave airforce! [DEN.GetLeader] is said to be ecstatic with the showing from the [USA.GetAdjective] government in providing the aid and will be personally overseeing their arrival."
+ denmark.4002.d2: "[SOV.GetLeader] has finished signing off on some shiny new fighters for our brave airforce! [DEN.GetLeader] is said to be ecstatic with the showing from the [SOV.GetAdjective] government in providing the aid and will be personally overseeing their arrival."
+ denmark.4002.o1: "Strålende!"
+ denmark.4003.t: "Our Allies Have Refused To Come To Our Aid!"
+ denmark.4003.d1: "[USA.GetLeader] has refused to sign off on providing some shiny new fighters for our brave airforce! [DEN.GetLeader] is said to be furious with the showing from the [USA.GetAdjective] government and has been attempting to get a response from Washington to no avail."
+ denmark.4003.d2: "[SOV.GetLeader] has refused to sign off on providing some shiny new fighters for our brave airforce! [DEN.GetLeader] is said to be furious with the showing from the [SOV.GetAdjective] government and has been attempting to get a response from Moscow to no avail."
+ denmark.4003.o1: "Those Bastards!"
 
  #News
  denmark.22.t: "Øresunds Broen"
