@@ -14,6 +14,7 @@ Bugfixes:
 	- Semi-Consumption Economy can no longer be taken by a "Rentier State"
 	- Game rules localisation fixes
 	- Corporate Tax Cost localisation clarification
+	- Denmark can now get planes from SOV/USA aka, denmark.4001
 
 Content:
 	- USA, SOV, CHI, ENG, FRA, RAJ, JAP, ITA, SPR, PER, KOR, TAI, ISR, NKO, TUR, GER, UKR, BRA, PAK, EGY missile technology setup
